[project]
name = "rankflow"
version = "0.1.0"
description = "Plot how multiple ranks evolved over processing steps - draw a rankflow."
authors = [
    {name = "Krystian Safjan", email = "ksafjan@gmail.com"},
]
dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=1.26.4",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
]
