[project]
name = "rankflow"
version = "0.1.1"
description = "Plot how multiple ranks evolved over processing steps - draw a rankflow."
authors = [
    {name = "Krystian Safjan", email = "ksafjan@gmail.com"},
]
dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=1.26.4",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = ["rankflow", "rank", "flow", "plot", "RAG", "retriever", "evaluation", "rag-evaluation", "rag-eval", "rag-eval-plot", "rag-evaluation-plot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Mathematics",
    ]
[project.urls]
"Source" = "https://github.com/izikeros/rankflow"
"Bug Tracker" = "https://github.com/izikeros/rankflow/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
]
